# ancient-calls

./: .gitignore  LICENSE  README.md  pyproject.toml
ancientcalls/: __init__.py  call_probability.py  figures.py  fit_match_prob.py  io.py  phylogeny.py  pipeline.py  reconstruction.R  reconstruction.py
commoncalls/: __init__.py  call_probability.py  config.py  figures.py  fit_match_prob.py  io.py  phylogeny.py  pipeline.py  reconstruction.py  similarity.py
configs/: example.yaml
data/example/: README.md
docs/: data-format.md  embedding.md  methods.md
scripts/: make_example_fixture.py  make_figures.py  run_pipeline.py  run_verified_reconstruction.py
tests/: test_edge_cases.py  test_smoke.py  test_units.py
verify/: build_verify_data.py  index.html  verify.html
