[project]
name = "ancientcalls"
version = "0.1.0"
description = "Phylogenetic age estimation of common animal calls from audio embeddings."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

# Public dependencies only. The proprietary REDACTED for review packages are NOT
# required to run the pipeline; users bring their own embeddings + metadata.
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "ete3>=3.1.3",
  "biopython>=1.83",
  "pyyaml>=6.0",
  "fsspec>=2024.2.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
# Read/write inputs and outputs directly from cloud object stores. All I/O goes
# through fsspec, which dispatches on the URL scheme — install the backend for
# the scheme you use (gs:// / s3:// / az://). `remote` bundles the common ones.
gcs = ["gcsfs>=2024.2.0"]
s3 = ["s3fs>=2024.2.0"]
azure = ["adlfs>=2024.2.0"]
remote = ["gcsfs>=2024.2.0", "s3fs>=2024.2.0", "adlfs>=2024.2.0"]
# Generate embeddings from audio (bring-your-own backend). Designed for, not
# required by, the core pipeline. See docs/data-format.md.
embedding = ["soundfile>=0.12", "librosa>=0.10"]
dev = ["pytest>=7.4", "ruff>=0.5"]

[project.scripts]
ancientcalls-run = "ancientcalls.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ancientcalls"]

[tool.pytest.ini_options]
# Let tests import the shared synthetic-fixture generator from scripts/.
pythonpath = ["scripts"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
